--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Studio</title>
   </head>
   <body>
     <!--Buttons above-->
-    <header>
-      <nav>
-        <a href="./index.html"  lang="en"> WebStudio</a>
+    <header class="header">
+      <nav class="nav">
+        <a class="link" href="./index.html"  lang="en"> WebStudio</a>
         <ul>
-          <li><a href="">Студія</a></li>
-          <li><a href="">Портфоліо</a></li>
+          <li><a href="./index.html" target="_self">Студія</a></li>
+          <li><a href="./portfolio.html" target="_self">Портфоліо</a></li>
           <li><a href="">Контакти</a></li>
         </ul>
       </nav>
