--- a/portfolio.html
+++ b/portfolio.html
@@ -7,51 +7,61 @@
     <title>Studio Portfolio</title>
 </head>
 <body class="body">
+
      <!--Buttons above-->
+
      <header class="header">
-        <nav class="nav">
-          <a class="link" href="./index.html"  lang="en"> WebStudio</a>
-          <ul class="list">
-            <li><a class="list-item"" href="./index.html">Студія</a></li>
-            <li><a class="list-item"" href="./portfolio.html">Портфоліо</a></li>
-            <li><a class="list-item"" href="">Контакти</a></li>
+        <nav class="nav-header">
+          <a class="link-header" href="./index.html"  lang="en"> WebStudio</a>
+          <ul class="list-header">
+            <li>
+                <a class="list-item-header"" href="./index.html">Студія</a>
+            </li>
+            <li>
+                <a class="list-item-header"" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li>
+                <a class="list-item-header"" href="">Контакти</a>
+            </li>
           </ul>
         </nav>
-       <ul class="list">
-          <li class="list-item">
-              <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+       <ul class="list-header-info">
+          <li class="list-item-info">
+              <a class="link-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-              <li class="list-item">
-                  <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+              <li class="list-item-info">
+                  <a class="link-info" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
        </ul>
       </header>
 
       <!-- Main section -->
 
-      <main>
+      <main class="main">
+
         <!-- Navigation in main -->
-        <nav class="nav">
-            <ul class="list">
-                <li class="list-item">
-                    <button class="btn" type="button">Усі</button>
+
+        <nav class="nav-main">
+            <ul class="list-main">
+                <li class="list-item-main">
+                    <button class="btn-main" type="button">Усі</button>
                 </li>
-                <li class="list-item">
-                    <button class="btn" type="button">Веб-сайти</button>
+                <li class="list-item-main">
+                    <button class="btn-main" type="button">Веб-сайти</button>
                 </li>
-                <li class="list-item">
-                    <button class="btn" type="button">Додатки</button>
+                <li class="list-item-main">
+                    <button class="btn-main" type="button">Додатки</button>
                 </li>
-                <li class="list-item">
-                    <button class="btn" type="button">Маркетинг</button>
+                <li class="list-item-main">
+                    <button class="btn-main" type="button">Маркетинг</button>
                 </li>
             </ul>
         </nav>
 
         <!-- Images -->
 
-        <section class="section">
-            <h1>Links</h1>
+        <section class="section-main">
+            <h1 visually hidden>Links</h1>
             <ul class="list">
                 <li class="list-item">
                     <img class="img" src="./images/portfolio-img/img.jpg" alt="Зображення сайту" width="370" height="294">
@@ -102,7 +112,7 @@
             </ul>
         </section>
       </main>
-      <footer>
+      <footer class="footer">
         <a class="link" href="./index.html" lang="en">
             WebStudio
         </a>
