--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
     <!--Buttons above-->
     <header class="header">
       <nav class="nav">
-        <a class="link" href="./index.html"  lang="en"> WebStudio</a>
+        <a class="link-logo" href="./index.html"  lang="en"> Web<span class="link-logo-part">Studio</span></a>
         <ul>
-          <li><a href="./index.html" target="_self">Студія</a></li>
-          <li><a href="./portfolio.html" target="_self">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+          <li>
+            <a href="./index.html" target="_self">Студія</a>
+          </li>
+          <li>
+            <a href="./portfolio.html" target="_self">Портфоліо</a>
+          </li>
+          <li>
+            <a href="">Контакти</a>
+          </li>
         </ul>
       </nav>
      <ul>
@@ -143,7 +149,7 @@
       </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer">
         <a href="./index.html" lang="en">
             WebStudio
         </a>
