--- a/portfolio.html
+++ b/portfolio.html
@@ -1,40 +1,40 @@
 <!DOCTYPE html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Studio Portfolio</title>
-</head>
-<body class="body">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Studio</title>
+    <link rel="stylesheet" href="./css/styles.css">
+  </head>
+  <body class="body">
 
-     <!--Buttons above-->
+    <!--Buttons above-->
 
-     <header class="header">
-        <nav class="nav-header">
-          <a class="link-header" href="./index.html"  lang="en"> WebStudio</a>
-          <ul class="list-header">
+    <header class="header">
+        <nav class="nav">
+          <a class="link-logo" href="./index.html"  lang="en"> Web<span class="link-logo-part">Studio</span></a>
+          <ul class="list-nav">
             <li>
-                <a class="list-item-header"" href="./index.html">Студія</a>
+              <a class="link" href="./index.html" target="_self">Студія</a>
             </li>
             <li>
-                <a class="list-item-header"" href="./portfolio.html">Портфоліо</a>
+              <a class="link" href="./portfolio.html" target="_self">Портфоліо</a>
             </li>
             <li>
-                <a class="list-item-header"" href="">Контакти</a>
+              <a class="link" href="">Контакти</a>
             </li>
           </ul>
         </nav>
-       <ul class="list-header-info">
-          <li class="list-item-info">
-              <a class="link-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
+       <ul class="list-header">
+          <li class="list">
+              <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-              <li class="list-item-info">
-                  <a class="link-info" href="tel:+380961111111">+38 096 111 11 11</a>
+              <li class="list">
+                  <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
        </ul>
       </header>
-
       <!-- Main section -->
 
       <main class="main">
@@ -43,17 +43,17 @@
 
         <nav class="nav-main">
             <ul class="list-main">
-                <li class="list-item-main">
-                    <button class="btn-main" type="button">Усі</button>
+                <li class="item">
+                    <button class="btn" type="button">Усі</button>
                 </li>
-                <li class="list-item-main">
-                    <button class="btn-main" type="button">Веб-сайти</button>
+                <li class="item">
+                    <button class="btn" type="button">Веб-сайти</button>
                 </li>
-                <li class="list-item-main">
-                    <button class="btn-main" type="button">Додатки</button>
+                <li class="item">
+                    <button class="btn" type="button">Додатки</button>
                 </li>
-                <li class="list-item-main">
-                    <button class="btn-main" type="button">Маркетинг</button>
+                <li class="item">
+                    <button class="btn" type="button">Маркетинг</button>
                 </li>
             </ul>
         </nav>
@@ -113,16 +113,16 @@
         </section>
       </main>
       <footer class="footer">
-        <a class="link" href="./index.html" lang="en">
-            WebStudio
+        <a class="logo-footer" href="./index.html" lang="en">
+            Web<span class="logo-footer-part">Studio</span>
         </a>
-        <address class="address-footer">м. Київ, пр-т Лесі Українки, 26</address>
+        <address class="address">м. Київ, пр-т Лесі Українки, 26</address>
         <ul class="list-footer">
-            <li class="list-footer-item">
-                <a class="link-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <li class="item">
+                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-                <li class="list-footer-item">
-                    <a class="link-footer" href="tel:+380961111111">+38 096 111 11 11</a>
+                <li class="item">
+                    <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
          </ul>
     </footer>
