--- a/index.html
+++ b/index.html
@@ -5,76 +5,89 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
+    <link rel="stylesheet" href="./css/styles.css">
   </head>
-  <body>
+  <body class="page">
+
     <!--Buttons above-->
+
     <header class="header">
       <nav class="nav">
         <a class="link-logo" href="./index.html"  lang="en"> Web<span class="link-logo-part">Studio</span></a>
-        <ul>
+        <ul class="list-nav">
           <li>
-            <a href="./index.html" target="_self">Студія</a>
+            <a class="link" href="./index.html" target="_self">Студія</a>
           </li>
           <li>
-            <a href="./portfolio.html" target="_self">Портфоліо</a>
+            <a class="link" href="./portfolio.html" target="_self">Портфоліо</a>
           </li>
           <li>
-            <a href="">Контакти</a>
+            <a class="link" href="">Контакти</a>
           </li>
         </ul>
       </nav>
-     <ul>
-        <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+     <ul class="list-header">
+        <li class="list">
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-            <li>
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <li class="list">
+                <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
      </ul>
     </header>
+
     <!--Some notes in main section-->
+
     <main>
-      <section>
-        <h1>
+
+      <!-- Hero -->
+
+      <section class="hero">
+        <h1 class="hero-title">
           Ефективні рішення для вашого бізнесу
         </h1>
-        <button type="button">Замовити послугу</button>
+        <button class="btn-hero" type="button">Замовити послугу</button>
       </section>
-      <section>
-        <h2>про</h2>
-      <ul>
+      
+        <!-- About -->
+
+      <section class="section">
+        <h2 visually hidden>про</h2>
+      <ul class="features">
         <li>
-          <h3>Увага до деталей</h3>
-            <p>
+          <h3 class="title">Увага до деталей</h3>
+            <p class="text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
         </li>
         <li>
-          <h3>Пунктуальність</h3>
-            <p>
+          <h3 class="title">Пунктуальність</h3>
+            <p class="text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
         </li>
         <li>
-          <h3>Планування</h3>
-            <p>
+          <h3 class="title">Планування</h3>
+            <p class="text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
         </li>
         <li>
-          <h3>Сучасні технології</h3>
-            <p>
+          <h3 class="title">Сучасні технології</h3>
+            <p class="text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
         </li>
       </ul>
       </section>
+
       <!--Images-->
-      <section>
-        <h2>Чим ми займаємося</h2>  
+
+      <section class="section">
+        <h2 class="section-title">Чим ми займаємося</h2>  
         <ul>
           <li>
             <img
@@ -103,63 +116,65 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Наша команда</h2>
+        <!-- Our team -->
+
+      <section class="section-team">
+        <h2 class="section-title">Наша команда</h2>
       <ul>
-        <li>
+        <li class="list">
             <img
               src="./images/our-team1/img.jpg"
               alt="team member"
               width="270"
               height="260"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product designer</p>
+            <h3 class="title">Ігор Дем'яненко</h3>
+            <p class="text" lang="en">Product designer</p>
         </li>
-        <li>
+        <li class="list">
             <img
               src="./images/our-team2/img.jpg"
               alt="team member"
               width="270"
               height="260"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend developer</p>
+            <h3 class="title">Ольга Рєпіна</h3>
+            <p class="text" lang="en">Frontend developer</p>
         </li>
-        <li>
+        <li class="list">
             <img
               src="./images/our-team-3/img.jpg"
               alt="team member"
               width="270"
               height="260"
             />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="title">Микола Тарасов</h3>
+            <p class="text" lang="en">Marketing</p>
         </li>
-        <li>
+        <li class="list">
             <img
               src="./images/our-team4/img.jpg"
               alt="Team member"
               width="270"
               height="260"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="title">Михайло Єрмаков</h3>
+            <p class="text" lang="en">UI Designer</p>
         </li>
       </ul>
       </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" lang="en">
-            WebStudio
+        <a class="logo-footer" href="./index.html" lang="en">
+            Web<span class="logo-footer-part">Studio</span>
         </a>
-        <address>м. Київ, пр-т Лесі Українки, 26</address>
-        <ul>
-            <li>
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <address class="address">м. Київ, пр-т Лесі Українки, 26</address>
+        <ul class="list-footer">
+            <li class="item">
+                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-                <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <li class="item">
+                    <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
          </ul>
     </footer>
