--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
   </head>
   <body class="body">
@@ -61,8 +64,8 @@
         <!-- Images -->
 
         <section class="section-main">
-            <h1 visually hidden>Links</h1>
-            <ul class="list">
+            <h1 hidden>Links</h1>
+            <ul class="list-portfolio">
                 <li class="list-item">
                     <img class="img" src="./images/portfolio-img/img.jpg" alt="Зображення сайту" width="370" height="294">
                     <h2 class="title">Технокряк</h2>
