--- a/portfolio.html
+++ b/portfolio.html
@@ -5,129 +5,185 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Studio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="body">
-
     <!--Buttons above-->
 
     <header class="header">
-        <nav class="nav">
-          <a class="link-logo" href="./index.html"  lang="en"> Web<span class="link-logo-part">Studio</span></a>
-          <ul class="list-nav">
-            <li>
-              <a class="link" href="./index.html" target="_self">Студія</a>
-            </li>
-            <li>
-              <a class="link" href="./portfolio.html" target="_self">Портфоліо</a>
-            </li>
-            <li>
-              <a class="link" href="">Контакти</a>
-            </li>
-          </ul>
-        </nav>
-       <ul class="list-header">
-          <li class="list">
-              <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <nav class="nav">
+        <a class="link-logo" href="./index.html" lang="en">
+          Web<span class="link-logo-part">Studio</span></a
+        >
+        <ul class="list-nav">
+          <li>
+            <a class="link" href="./index.html" target="_self">Студія</a>
           </li>
-              <li class="list">
-                  <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-              </li>
-       </ul>
-      </header>
-      <!-- Main section -->
+          <li>
+            <a class="link" href="./portfolio.html" target="_self">Портфоліо</a>
+          </li>
+          <li>
+            <a class="link" href="">Контакти</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="list-header">
+        <li class="list">
+          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="list">
+          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
+    <!-- Main section -->
 
-      <main class="main">
+    <main class="main">
+      <!-- Navigation in main -->
 
-        <!-- Navigation in main -->
+      <nav class="nav-main">
+        <ul class="list-main">
+          <li class="item">
+            <button class="btn" type="button">Усі</button>
+          </li>
+          <li class="item">
+            <button class="btn" type="button">Веб-сайти</button>
+          </li>
+          <li class="item">
+            <button class="btn" type="button">Додатки</button>
+          </li>
+          <li class="item">
+            <button class="btn" type="button">Маркетинг</button>
+          </li>
+        </ul>
+      </nav>
 
-        <nav class="nav-main">
-            <ul class="list-main">
-                <li class="item">
-                    <button class="btn" type="button">Усі</button>
-                </li>
-                <li class="item">
-                    <button class="btn" type="button">Веб-сайти</button>
-                </li>
-                <li class="item">
-                    <button class="btn" type="button">Додатки</button>
-                </li>
-                <li class="item">
-                    <button class="btn" type="button">Маркетинг</button>
-                </li>
-            </ul>
-        </nav>
+      <!-- Images -->
 
-        <!-- Images -->
-
-        <section class="section-main">
-            <h1 hidden>Links</h1>
-            <ul class="list-portfolio">
-                <li class="list-item">
-                    <img class="img" src="./images/portfolio-img/img.jpg" alt="Зображення сайту" width="370" height="294">
-                    <h2 class="title">Технокряк</h2>
-                    <p class="text">Веб-сайт</p>
-                </li>
-                <li class="list-item">
-                    <img class="img" src="./images/portfolio-img/img-1.jpg" alt="Баскетболісти" width="370" height="294">
-                    <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-                    <p class="text">Дизайн</p>
-                </li>
-                <li class="list-item">
-                    <img class="img" src="./images/portfolio-img/img-2.jpg" alt="Логотип ресторану" width="370" height="294">
-                    <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-                    <p class="text">Додаток</p>
-                </li>
-                <li class="list-item">
-                    <img class="img" src="./images/portfolio-img/img-3.jpg" alt="Навушники" width="370" height="294">
-                    <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
-                    <p class="text">Маркетинг</p>
-                </li>
-                <li class="list-item">
-                    <img class="img" src="./images/portfolio-img/img-4.jpg" alt="Коробки" width="370" height="294">
-                    <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
-                    <p class="text">Додаток</p>
-                </li>
-                <li class="list-item">
-                    <img class="img" src="./images/portfolio-img/img-5.jpg" alt="Комп'ютер" width="370" height="294">
-                    <h2 class="title" lang="en">Inspiration has no Borders</h2>
-                    <p class="text">Веб-сайт</p>
-                </li>
-                <li class="list-item">
-                    <img class="img" src="./images/portfolio-img/img-6.jpg" alt="Журнал" width="370" height="294">
-                    <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
-                    <p class="text">Дизайн</p>
-                </li>
-                <li class="list-item">
-                    <img class="img" src="./images/portfolio-img/img-7.jpg" alt="Папірець з літерами" width="370" height="294">
-                    <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
-                    <p class="text">Маркетинг</p>
-                </li>
-                <li class="list-item">
-                    <img class="img" src="./images/portfolio-img/img-8.jpg" alt="Печатають на комп'ютері" width="370" height="294">
-                    <h2 class="title" lang="en">Growing Business</h2>
-                    <p class="text">Додаток</p>
-                </li>
-
-            </ul>
-        </section>
-      </main>
-      <footer class="footer">
-        <a class="logo-footer" href="./index.html" lang="en">
-            Web<span class="logo-footer-part">Studio</span>
-        </a>
-        <address class="address">м. Київ, пр-т Лесі Українки, 26</address>
-        <ul class="list-footer">
-            <li class="item">
-                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-                <li class="item">
-                    <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-         </ul>
+      <section class="section-main">
+        <h1 hidden>Links</h1>
+        <ul class="list-portfolio">
+          <li class="list-item">
+            <img
+              class="img"
+              src="./images/portfolio-img/img.jpg"
+              alt="Зображення сайту"
+              width="370"
+              height="294"
+            />
+            <h2 class="title">Технокряк</h2>
+            <p class="text">Веб-сайт</p>
+          </li>
+          <li class="list-item">
+            <img
+              class="img"
+              src="./images/portfolio-img/img-1.jpg"
+              alt="Баскетболісти"
+              width="370"
+              height="294"
+            />
+            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <p class="text">Дизайн</p>
+          </li>
+          <li class="list-item">
+            <img
+              class="img"
+              src="./images/portfolio-img/img-2.jpg"
+              alt="Логотип ресторану"
+              width="370"
+              height="294"
+            />
+            <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
+            <p class="text">Додаток</p>
+          </li>
+          <li class="list-item">
+            <img
+              class="img"
+              src="./images/portfolio-img/img-3.jpg"
+              alt="Навушники"
+              width="370"
+              height="294"
+            />
+            <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
+            <p class="text">Маркетинг</p>
+          </li>
+          <li class="list-item">
+            <img
+              class="img"
+              src="./images/portfolio-img/img-4.jpg"
+              alt="Коробки"
+              width="370"
+              height="294"
+            />
+            <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
+            <p class="text">Додаток</p>
+          </li>
+          <li class="list-item">
+            <img
+              class="img"
+              src="./images/portfolio-img/img-5.jpg"
+              alt="Комп'ютер"
+              width="370"
+              height="294"
+            />
+            <h2 class="title" lang="en">Inspiration has no Borders</h2>
+            <p class="text">Веб-сайт</p>
+          </li>
+          <li class="list-item">
+            <img
+              class="img"
+              src="./images/portfolio-img/img-6.jpg"
+              alt="Журнал"
+              width="370"
+              height="294"
+            />
+            <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
+            <p class="text">Дизайн</p>
+          </li>
+          <li class="list-item">
+            <img
+              class="img"
+              src="./images/portfolio-img/img-7.jpg"
+              alt="Папірець з літерами"
+              width="370"
+              height="294"
+            />
+            <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
+            <p class="text">Маркетинг</p>
+          </li>
+          <li class="list-item">
+            <img
+              class="img"
+              src="./images/portfolio-img/img-8.jpg"
+              alt="Печатають на комп'ютері"
+              width="370"
+              height="294"
+            />
+            <h2 class="title" lang="en">Growing Business</h2>
+            <p class="text">Додаток</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer class="footer">
+      <a class="logo-footer" href="./index.html" lang="en">
+        Web<span class="logo-footer-part">Studio</span>
+      </a>
+      <address class="address">м. Київ, пр-т Лесі Українки, 26</address>
+      <ul class="list-footer">
+        <li class="item">
+          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="item">
+          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </footer>
-</body>
+  </body>
 </html>
