--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         >
         <ul class="list-nav">
           <li>
-            <a class="link" href="./index.html" target="_self">Студія</a>
+            <a class="link active" href="./index.html" target="_self">Студія</a>
           </li>
           <li>
             <a class="link" href="./portfolio.html" target="_self">Портфоліо</a>
