--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
             <a class="link" href="./index.html" target="_self">Студія</a>
           </li>
           <li>
-            <a class="link" href="./portfolio.html" target="_self">Портфоліо</a>
+            <a class="link active" href="./portfolio.html" target="_self">Портфоліо</a>
           </li>
           <li>
             <a class="link" href="">Контакти</a>
@@ -47,10 +47,10 @@
     <main class="main">
       <!-- Navigation in main -->
 
-      <nav class="nav-main">
+      <section class="section-portfolio">
         <ul class="list-main">
           <li class="item">
-            <button class="btn" type="button">Усі</button>
+            <button class="btn active" type="button">Усі</button>
           </li>
           <li class="item">
             <button class="btn" type="button">Веб-сайти</button>
@@ -59,10 +59,13 @@
             <button class="btn" type="button">Додатки</button>
           </li>
           <li class="item">
+            <button class="btn" type="button">Дизайн</button>
+          </li>
+          <li class="item">
             <button class="btn" type="button">Маркетинг</button>
           </li>
         </ul>
-      </nav>
+      </section>
 
       <!-- Images -->
 
